removing ec2 command endpoints. service now runs in fargate.
